znk-exercise fix overflow

--- a/src/components/znkExercise/toolbox/scss/_draw-tool.scss
+++ b/src/components/znkExercise/toolbox/scss/_draw-tool.scss
@@ -5,11 +5,14 @@ znk-exercise{
 
         &.no-pointer-events{
             pointer-events: none;
-            overflow: hidden;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
 
         &.crosshair-cursor{
             cursor: crosshair;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
     }
 }
